# bte-pytorch

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: makedoc.yml  publish.yml  publish_dev.yml  publish_master.yml
bte/: __init__.py
bte/dvm/: collision.py  distribution.py  solver.py
bte/grad/: GradEquation.py  GradEquationHybrid.py  collision_grad.py  distribution.py  indexs.py  operators.py
bte/nsr/: block.py  dataset.py  logger.py  mesh.py  model.py  model_LR.py  old_model.py  parser.py  reduced_collision.py  refsolution.py  report.py  utils.py  visual_utils.py
bte/utils/: ERK.py  IMEX_RK.py  IMEX_RK2.py  __init__.py  distransfer.py  gas.py  indexs.py  limiter.py  record.py  rescon.py  specials.py  trace.py  weno5.py
data/: cylinder-fsm-20-0.1.plt  cylinder-fsm-40-0.01.plt  cylinder-fsm-40-0.1.plt  cylinder-fsm-80-0.1.plt  cylinder-sbgk-20-0.01.plt  cylinder-sbgk-40-0.1.plt  cylinder-sbgk-80-0.01.plt  cylinder-sbgk-80-0.1.plt
data/D2V3_nsr/: cylinder-fsm-20-0.01.plt  cylinder-fsm-20-1.0.plt  cylinder-fsm-40-1.0.plt  cylinder-fsm-80-0.01.plt  cylinder-fsm-80-1.0.plt  cylinder-sbgk-20-0.1.plt  cylinder-sbgk-20-1.0.plt  cylinder-sbgk-40-0.01.plt  cylinder-sbgk-40-1.0.plt  cylinder-sbgk-80-1.0.plt
docs/: Install.rst  QuickStart.rst  SupportedAlgorithms.ipynb  bte.dvm.rst  bte.grad.rst  bte.rst  bte.utils.rst  conf.py  index.rst  modules.rst  requirements.txt  usage.rst
docs/notebooks/: D1V1_BGK.ipynb  D1V3_BGK.ipynb
examples/nsr/: D1V3.py  (+4 more)
notebooks/: D1V1_BGK.ipynb
test/: test_ops.py
(+18 files in other folders)
