[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bte-pytorch"
readme = "README.md"
license = {file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "torch >=1.9.0",
    "numpy",
    "scipy",
]
authors = [
    { name = "Zhengyi Li", email = "lizhengyi.pku@gmail.com" },
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/li-positive-one/bte-pytorch"
Documentation = "https://bte-pytorch.readthedocs.io/en/latest"

[tool.flit.module]
name = "bte"